Code evolution, doc added

--- a/data/www/ServoService.html
+++ b/data/www/ServoService.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>om src/sensor/sensor_handler.cpp:1:
+<head>
     <title>Servo Control Panel</title>
-      <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>🤖 Servo Control Panel</h1>
@@ -31,11 +31,6 @@
         <div id="action_result"></div>
     </div>
     
-    <div class="status-link">
-        <p><a href="/servo/statuom src/sensor/sensor_handler.cpp:1:s">View Servo Status</a></p>
-    </div>
-    
-    <script>
-    </script>
+    <script src="ServoService.js"></script>
 </body>
 </html>
