--- a/data/index.html
+++ b/data/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>K10 Bot Control Panel</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="./favicon.svg">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="icon" href="/favicon.svg">
 
 </head>
 <body>
