--- a/data/test.html
+++ b/data/test.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>K10 Bot API Test</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="./favicon.ico">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="icon" href="/favicon.svg">
   <style>
     .route-container { background: white; margin: 15px 0; padding: 15px; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
     .route-header { margin-bottom: 10px; }
