refactoring to reduce code. several changes

--- a/data/index.html
+++ b/data/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>K10 Bot Control Panel</title>
-  <link rel="stylesheet" href="/style.css">
-  <link rel="icon" href="/favicon.svg">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./favicon.svg">
 
 </head>
 <body>
@@ -13,17 +13,25 @@
   <div class="panel">
     <h2>Service Interfaces</h2>
     <div class="service-grid">
-      <a href="/ServoService.html" class="service-card">
+      <a href="./ServoService.html" class="service-card">
         <div class="service-title">🔧 Servo Control</div>
         <div class="service-desc">Control servo motors (channels 0-7)</div>
       </a>
-      <a href="/K10webcam.html" class="service-card">
+      <a href="./WebcamService.html" class="service-card">
         <div class="service-title">📷 Webcam</div>
         <div class="service-desc">View camera feed and capture images</div>
       </a>
-      <a href="/HTTPService.html" class="service-card">
-        <div class="service-title">⚙️ HTTP Service</div>
-        <div class="service-desc">Configure HTTP service settings</div>
+      <a href="./LogService.html" class="service-card">
+        <div class="service-title">⚙️ Logs</div>
+        <div class="service-desc">View logs</div>
+      </a>
+      <a href="./MetricService.html" class="service-card">
+        <div class="service-title">📊 Metrics</div>
+        <div class="service-desc">View system metrics</div>
+      </a>
+            <a href="./MusicService.html" class="service-card">
+        <div class="service-title">🎵 Music Control</div>
+        <div class="service-desc">Control music playback and tones</div>
       </a>
     </div>
   </div>
